# rust-quiz-web-app

./: .dockerignore  .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.backend.prod  Dockerfile.frontend.local  Dockerfile.frontend.prod  Dockerfile.nginx-certbot  Dockerfile.openssl  LICENSE  README.md  compose-local.yaml  compose-prod.yaml  compose.yaml
backend/: Cargo.toml  Dockerfile.dev
backend/configuration/: base.yaml  local.yaml  production.yaml
backend/src/: configuration.rs  lib.rs  main.rs  session_wrapper.rs  startup.rs  surrealdb_repo.rs  telemetry.rs
backend/src/authentication/: middleware.rs  mod.rs  password.rs
backend/src/routes/: create_questions.rs  create_quiz.rs  create_user.rs  destroy_question.rs  destroy_quiz.rs  edit_question.rs  edit_quiz.rs  get_question.rs  get_quiz.rs  health_check.rs  like_question.rs  login_user.rs  mod.rs  user_logout.rs
backend/tests/api/: create_questions.rs  create_quiz.rs  create_user.rs  destroy_question.rs  destroy_quiz.rs  edit_question.rs  edit_quiz.rs  get_questions.rs  get_quiz.rs  health_check.rs  log_out_users.rs  loggin_user.rs  main.rs  utils.rs
docs/: design.md
e2e/testsuites/: homepage.robot
frontend/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  index.html  nginx-certbot.conf  nginx-local.conf  nginx-prod.conf  nginx.conf
frontend/public/css/: style.css
frontend/src/: app.rs  lib.rs  main.rs  router.rs  store.rs  utils.rs
frontend/src/components/: card.rs  footer.rs  mod.rs
frontend/src/components/dashboard/: create_questions.rs  display_questions.rs  edit_questions.rs  get_quiz.rs  make_quiz.rs  mod.rs  question_types.rs  take_quiz.rs  update_quiz.rs
frontend/src/models/: mimic_surreal.rs  mod.rs  questions.rs  quizzes.rs
frontend/src/pages/: dashboard.rs  home.rs  login.rs  mod.rs  new_user.rs  protected_dashboard.rs  tos.rs
models/: Cargo.toml
models/src/: lib.rs  model_errors.rs  questions.rs  quiz.rs
scripts/: check_and_gen_sslcerts.sh
surrealize_macro/: Cargo.toml
surrealize_macro/src/: lib.rs
