[workspace]
resolver = "2"
members = [
  "frontend",
  "backend",
  "models",
  # "jsonmodels", TODO: Possible future implementation
  "surrealize_macro",
]

[workspace.package]
authors = ["Kevin Sullivan"]
version = "0.6.0"
license-file = "LICENSE"
license = "MIT"
repository = "https://github.com/ks982579/rust-quiz-web-app"
readme = "README.md"
keywords = ["rust", "actix-web", "leptos", "web", "quiz"]
categories = ["web-application"]
