[package]
name = "backend"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
anyhow = "1.0.86"
config = "0.14.0"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls", "cookies"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.117"
surrealdb = "1.5.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
models = { path = "../models" }
uuid = { version = "1.8.0", features = ["v4"] }
argon2 = { version = "0.5.3", features = ["std"] }
secrecy = { version = "0.8.0", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
actix-session = "0.9.0"
chrono = "0.4.38"

[dev-dependencies]
wiremock = "0.6.0"
