[package]
name = "frontend"
version = "0.2.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.11", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
models = { path = "../models" }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.69"
features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] 
