[package]
name = "models"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
surrealdb = { version = "1.5"}
surrealize_macro = { path = "../surrealize_macro" }
